Update 'j5ttvm0sz-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:1174d81aba2f39a80c3ae2c1cb00c75165dece4d@sha256:525d17eb81847f008ebcb6314089555eacf2c3ee00f2a8d213b7abad9e31bf11

--- a/components/j5ttvm0sz-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/j5ttvm0sz-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: j5ttvm0sz-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:1174d81aba2f39a80c3ae2c1cb00c75165dece4d@sha256:525d17eb81847f008ebcb6314089555eacf2c3ee00f2a8d213b7abad9e31bf11
+          name: container-image
